<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.InputNameActivity"
    android:background="@color/white">
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_keyboard_arrow_left_24_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image" />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:fontFamily="@font/geomanist_medium"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/biasanya_kamu_dipanggil_apa"
        android:autofillHints="Nomor Ponsel"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:inputType="textPersonName" />
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snk_register"
        android:fontFamily="@font/geomanist_regular"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputButton"/>
    <Button
        android:id="@+id/inputButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/submit"
        android:backgroundTint="@color/grab_main_green_darker"
        android:textColor="@color/white"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/geomanist_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
