<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.InputPhoneActivity"
    android:background="@color/white">
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_keyboard_arrow_left_24_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image" />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ponsel"
        android:fontFamily="@font/geomanist_medium"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"/>
    <com.hbb20.CountryCodePicker
        app:ccp_defaultNameCode="ID"
        android:id="@+id/countryCodePicker"
        android:layout_width="130dp"
        android:layout_height="50dp"
        app:ccp_autoDetectCountry="true"
        app:ccp_showFlag="true"
        app:ccpDialog_showCloseIcon="false"
        app:ccpDialog_showFastScroller="false"
        app:ccpDialog_backgroundColor="@color/white"
        app:ccpDialog_textColor="@color/black"
        app:ccp_flagBorderColor="@color/black"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:ccpDialog_allowSearch="false"
        app:ccpDialog_cornerRadius="20dp"/>
    <EditText
        android:id="@+id/input"
        android:layout_width="220dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toEndOf="@id/countryCodePicker"
        android:hint="@string/_000000000"
        android:autofillHints="Nomor Ponsel"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/black"
        android:inputType="phone" />
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kirimi_saya_kode_melalui_whatsapp"
        android:fontFamily="@font/geomanist_regular"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/inputButton"/>
    <Button
        android:id="@+id/inputButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/submit"
        android:backgroundTint="@color/grab_main_green_darker"
        android:textColor="@color/white"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/geomanist_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
