<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.InputOTPActivity"
    android:background="@color/white">
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_keyboard_arrow_left_24_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image" />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_title"
        android:fontFamily="@font/geomanist_regular"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/input"
        android:layout_width="220dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/_000000"
        android:maxLength="6"
        android:textSize="25dp"
        android:autofillHints="Nomor Ponsel"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:background="#00000000"
        android:inputType="phone" />
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Belum mendapatkan kode?"
        android:fontFamily="@font/geomanist_regular"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/descriptionHint"/>
    <TextView
        android:id="@+id/descriptionHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_desc_hint"
        android:fontFamily="@font/geomanist_regular"
        android:textColor="@color/gray_darker"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
