<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="85dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <FrameLayout
                android:id="@+id/layoutHeaderBackground"
                android:layout_width="match_parent"
                android:layout_height="183dp"
                android:background="@color/grab_main_green"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="20dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/geomanist_medium"
                        android:textSize="15sp"
                        android:text="@string/main_title"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/geomanist_regular"
                        android:textSize="12sp"
                        android:text="@string/main_subtitle"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <ImageView
                    android:id="@+id/imageHeaderBackgroundVector"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/main_welcoming_vector"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="25dp"/>
            </FrameLayout>
            <com.google.android.material.search.SearchBar
                android:id="@+id/searchBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="154dp"
                android:hint="@string/search_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/main_searchbar_bg"
                android:backgroundTint="@color/white">
            </com.google.android.material.search.SearchBar>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerHorizontalMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/searchBar"
                android:orientation="horizontal"
                android:padding="10dp"/>
            <LinearLayout
                android:id="@+id/layoutRegisterPrize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/recyclerHorizontalMenu"
                android:orientation="horizontal"
                android:background="@drawable/main_registerprize_bg"
                android:weightSum="4"
                android:layout_margin="10dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="20dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/geomanist_regular"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="@string/main_prize_title"
                        android:layout_marginBottom="15dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:fontFamily="@font/geomanist_regular"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:text="@string/main_prize_subtitle"/>
                    <SeekBar
                        android:id="@+id/seekBar"
                        style="@style/Widget.AppCompat.SeekBar.Discrete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tickMark="@color/black"
                        android:thumbTint="@color/white"
                        android:max="2" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="4">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/geomanist_regular"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="10sp"
                            android:text="@string/hadiah_1"
                            android:layout_marginBottom="15dp"
                            android:layout_weight="1"
                            tools:ignore="SmallSp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/geomanist_regular"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="10sp"
                            android:text="@string/hadiah_2"
                            android:layout_marginBottom="15dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            tools:ignore="SmallSp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/geomanist_regular"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="10sp"
                            android:text="@string/hadiah_3"
                            android:layout_marginBottom="15dp"
                            android:layout_weight="1"
                            android:gravity="end"
                            tools:ignore="SmallSp" />
                    </LinearLayout>
                </LinearLayout>
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="80dp"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_achievement"
                    android:scaleType="centerInside"/>
            </LinearLayout>
            <TextView
                android:id="@+id/foodForYouTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/geomanist_regular"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="Makanan untukmu"
                android:layout_margin="15dp"
                app:layout_constraintTop_toBottomOf="@id/layoutRegisterPrize"
                app:layout_constraintStart_toStartOf="parent"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_circle_right_24"
                app:layout_constraintStart_toEndOf="@id/foodForYouTitle"
                app:layout_constraintTop_toTopOf="@id/foodForYouTitle"
                app:layout_constraintBottom_toBottomOf="@id/foodForYouTitle"
                android:layout_margin="10dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerHorizontalFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/foodForYouTitle"
                android:orientation="horizontal"
                android:padding="15dp"/>
            <TextView
                android:id="@+id/martForYouTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/geomanist_regular"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="Pesan dengan GrabMart"
                android:layout_margin="15dp"
                app:layout_constraintTop_toBottomOf="@id/recyclerHorizontalFood"
                app:layout_constraintStart_toStartOf="parent"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_circle_right_24"
                app:layout_constraintStart_toEndOf="@id/martForYouTitle"
                app:layout_constraintTop_toTopOf="@id/martForYouTitle"
                app:layout_constraintBottom_toBottomOf="@id/martForYouTitle"
                android:layout_margin="10dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerHorizontalMart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/martForYouTitle"
                android:orientation="horizontal"
                android:padding="15dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:background="@drawable/main_footerlogin_bg"
        android:weightSum="2"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:backgroundTint="@color/grab_secondary_blue"
            android:textColor="@color/grab_main_green_darker"/>
        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masuk"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/alertLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/main_footerlogin_bg"
        android:padding="20dp"
        android:gravity="center_vertical"
        android:visibility="invisible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/geomanist_medium"
            android:textSize="20sp"
            android:text="Ayo masuk!"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/geomanist_regular"
            android:textSize="15sp"
            android:text="Hanya dalam satu menit, kamu bisa mengakses\nsemua promo, layanan dan lainnya."
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="center_vertical">
            <Button
                android:id="@+id/registerAlertButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daftar"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/grab_secondary_blue"
                android:textColor="@color/grab_main_green_darker"/>
            <Button
                android:id="@+id/loginAlertButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masuk"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
